--- a/style.css
+++ b/style.css
@@ -398,6 +398,11 @@ video {
     }
   .h1{
     font-size: 1.5rem;
+  }
+
+  .arrow{
+    position: relative;
+    right: 10px
 }
 
 @media (max-width: 376px) {
