--- a/style.css
+++ b/style.css
@@ -323,7 +323,7 @@ video {
     main{
         margin: 0;
         place-self: center;
-        max-width: 340px;
+        max-width: 300px
 
     }
 
@@ -380,12 +380,16 @@ video {
         height: 350px;
     }
 
+    .main{
+        max-width: 340px;
+    }
+
     .dis-sec-btn{
         margin: 0 0 0 10px;
     }
 
     .free{
-        margin: 5px 0 110px 5px;
+        margin: 5px 0 110px 0;
         width: 350px;
     }
 
