--- a/style.css
+++ b/style.css
@@ -327,6 +327,10 @@ video {
 
     }
 
+    .dis-sec-btn{
+        margin: 0 0 0 10px;
+    }
+
     .sec2{
         display: flex;
         flex-wrap: wrap;
