--- a/style.css
+++ b/style.css
@@ -447,6 +447,11 @@ video {
             width: 320px;
             margin: 0;
         }
+          
+        .arrow {
+        position: relative;
+        left: 60px;
+        }
 
         .scents{
             width: 18rem;
