--- a/style.css
+++ b/style.css
@@ -465,6 +465,7 @@ video {
             padding: 20px 30px;
         }
 
-          .video{
-            length: 
+        .video{
+          width: 200px;
+        }
 }
