--- a/style.css
+++ b/style.css
@@ -417,7 +417,8 @@ video {
 
         .container{
             margin: 0;
-            padding:0;
+            padding-left: 0;
+            padding-right: 0;
         }
 
         main{
