--- a/style.css
+++ b/style.css
@@ -469,8 +469,7 @@ video {
         }
 
         .line{
-          margin-left:0;
-          margin-right:0;
+          font-size: 10px;
         }
 
         .btns{
